--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "repository": "github:Lambda-School-Labs/express-groomer",
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@craco/craco": "^5.6.4",
     "@okta/okta-react": "^3.0.8",
     "@okta/okta-signin-widget": "^4.1.2",
