update map and add features

--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@craco/craco": "^5.6.4",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.0",
     "@okta/okta-react": "^3.0.8",
     "@okta/okta-signin-widget": "^4.1.2",
+    "@turf/turf": "^5.1.6",
     "antd": "^4.4.3",
     "axios": "^0.19.2",
     "craco-less": "^1.17.0",
+    "mapbox-gl": "^1.12.0",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
